<resources>
    <string name="app_name">FeelinYourSkin</string>
    <string name="welcome_skin_lover">Welcome Skin Lover!</string>
    <string name="welcome_back_your_best_friend_missed_you">Welcome back, your best friend missed you!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_in">Sign in</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google_sign_in">Google sign in</string>
    <string name="facebook_sign_in">Facebook sign in</string>
    <string name="twitter_sign_in">Twitter sign in</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hey_beautiful_welcome_to_feelinyourskin">Hey beautiful, welcome to FeelinYourSkin!</string>
    <string name="meet_your_new_best_friend_feelinyourskin_create_skincare_routines_and_follow_your_product_s_validity">Meet your new best friend, FeelinYourSkin. Create skincare routines and follow your product\'s validity</string>
    <string name="register">Register</string>
    <string name="products">products</string>
    <string name="sign_up_and_lets_start_taking_care_of_that_lovely_skin_of_yours">Sign up and lets start taking care of that lovely skin of yours</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="or_register_with">Or Register With</string>
    <string name="please_select_your_gender">Please Select Your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="malepic">MalePic</string>
    <string name="femalepic">femalepic</string>
    <string name="now_choose_your_type_of_routine">Now Choose Your Routine Type</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="select_your_skin_type">Select Your Skin Type</string>
    <string name="oilypic">OilyPic</string>
    <string name="drypic">DryPic</string>
    <string name="shiny_greasy_looking_most_likely_to_have_visible_enlarged_pores">Shiny, Greasy looking, most likely to have visible enlarged pores</string>
    <string name="flaky_scaly_or_rough_patches_on_the_face_and_or_body">Flaky, Scaly or rough patches on the face and/or body</string>
    <string name="oily">Oily</string>
    <string name="nightpic">NightPic</string>
    <string name="daypic">DayPic</string>
    <string name="dry">Dry</string>
    <string name="drier_in_some_places_mostly_cheeks_and_oily_in_others_such_as_t_zone">Drier in some places (mostly cheeks) and oily in others such as T-zone</string>
    <string name="mixedpic">MixedPic</string>
    <string name="mixed">Mixed</string>
    <string name="maleoilypic">maleoilypic</string>
    <string name="malemixedpic">malemixedpic</string>
</resources>