<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MaleSkinActivity">

    <TextView
        android:id="@+id/SkinType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/select_your_skin_type"
        android:textColor="#7353BA"
        android:textSize="35sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/MaleOilyPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SkinType"
        android:contentDescription="@string/maleoilypic"
        android:adjustViewBounds="true"
        android:maxHeight="400dp"
        android:src="@drawable/maleoily"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="230dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/MaleOilyDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:text="@string/shiny_greasy_looking_most_likely_to_have_visible_enlarged_pores"
        android:textStyle="bold"
        android:textColor="#7353BA"
        android:layout_below="@+id/MaleOilyPic"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="230dp"
        android:gravity="center"
        android:textSize="14sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/MaleOilyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MaleOilyDesc"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="230dp"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:text="@string/oily"
        android:textColor="#48D1CC"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/MaleDryPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SkinType"
        android:contentDescription="@string/drypic"
        android:adjustViewBounds="true"
        android:maxHeight="400dp"
        android:src="@drawable/maledry"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/DryDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:text="@string/flaky_scaly_or_rough_patches_on_the_face_and_or_body"
        android:textStyle="bold"
        android:textColor="#7353BA"
        android:layout_below="@+id/MaleDryPic"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:textSize="14sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/MaleDryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DryDesc"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:text="@string/dry"
        android:textStyle="bold"
        android:textColor="#808080"
        />

    <ImageView
        android:id="@+id/MaleMixedPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MaleDryBtn"
        android:contentDescription="@string/malemixedpic"
        android:adjustViewBounds="true"
        android:maxHeight="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:src="@drawable/malemixed"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/MixedDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:text="@string/drier_in_some_places_mostly_cheeks_and_oily_in_others_such_as_t_zone"
        android:layout_below="@+id/MaleMixedPic"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#7353BA"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/MaleMixedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MixedDesc"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:text="@string/mixed"
        android:textStyle="bold"
        android:textColor="#b0d2cf"
        />


</RelativeLayout>