<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="80dp"
        android:gravity="start"
        android:text="@string/welcome_skin_lover"
        android:textColor="#7353BA"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signUpWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginHorizontal="40dp"
        android:gravity="start"
        android:text="@string/sign_up_and_lets_start_taking_care_of_that_lovely_skin_of_yours"
        android:textColor="#7353BA"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpWelcome"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="username"
        android:background="#80ffffff"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="#80ffffff"
        android:drawableStart="@drawable/ic_baseline_visibility_off_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/RePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="#80ffffff"
        android:drawableStart="@drawable/ic_baseline_visibility_off_24"
        android:drawablePadding="20dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RePassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="#7353BA"
        android:padding="15dp"
        android:text="@string/register" />

</RelativeLayout>