<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="80dp"
        android:gravity="start"
        android:text="@string/welcome_skin_lover"
        android:textColor="#7353BA"
        android:textSize="35sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/wb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginHorizontal="40dp"
        android:gravity="start"
        android:text="@string/welcome_back_your_best_friend_missed_you"
        android:textColor="#7353BA"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wb"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:autofillHints="username"
        android:background="#80ffffff"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username1"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:background="#80ffffff"
        android:drawableStart="@drawable/ic_baseline_visibility_off_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#546E7A" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password1"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="30dp"
        android:backgroundTint="#7353BA"
        android:padding="15dp"
        android:text="@string/sign_in"
        />

</RelativeLayout>