<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GenderActivity">


    <TextView
        android:id="@+id/SelectGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/please_select_your_gender"
        android:textColor="#7353BA"
        android:textSize="35sp"
        android:textStyle="bold"
        />


    <ImageView
        android:id="@+id/MalePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SelectGender"
        android:contentDescription="@string/malepic"
        android:adjustViewBounds="true"
        android:maxHeight="400dp"
        android:src="@drawable/malepic"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="230dp"
        android:layout_marginTop="150dp"
        />

    <ImageView
        android:id="@+id/FemalePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SelectGender"
        android:contentDescription="@string/femalepic"
        android:adjustViewBounds="true"
        android:maxHeight="400dp"
        android:src="@drawable/femalepic"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="150dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/MaleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MalePic"
        android:layout_marginVertical="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="230dp"
        android:backgroundTint="@color/white"
        android:padding="15dp"
        android:text="@string/male"
        android:textColor="#7353BA"
        android:textStyle="bold"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/FemaleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FemalePic"
        android:layout_marginVertical="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#7353BA"
        android:padding="15dp"
        android:text="@string/female"
        android:textStyle="bold"
        />

</RelativeLayout>